# pentultimate_solver

./: .editorconfig  .gitignore  Cargo.toml  README.md  RUST_LOG.json5  RUST_LOG.ron  colorData.ron  config.toml  debugModes.ron  debugStringData.ron  lightAndCameraData.ron  pieceLibraryData.ron  preferences.ron  rustfmt.toml  stringData.ron  testStringData.ron
.cargo/: config.toml
.config/: nextest.toml
assets/config/: debugModes.ron  debugStringData.ron  library.ron  pieceLibraryData.ron  preferences.ron  reorientationTests.ron  rustLog.ron  stringData.ron  testStringData.ron
benches/: criterion_benchmarks.rs
examples/: egui_playground.rs  transformation_finder.rs
src/: app.rs  colors.rs  debug.rs  lib.rs  main.rs  math.rs  piece.rs  preferences.rs  prelude.rs  puzzle.rs  strings.rs  tools.rs  ui.rs  util.rs
src/math/: mod.rs  polyhedra.rs
src/math/polyhedra/: data.rs  mod.rs  properties.rs
src/preferences/: colors.rs  mod.rs
src/puzzle/: explore.rs  explorer.rs  mod.rs  solver.rs  tools.rs  transformation.rs
src/puzzle/solver/: mod.rs  tools.rs
src/puzzle/transformation/: library.rs  mod.rs  packs.rs
src/ui/: camera.rs  input.rs  mod.rs
src/util/: inspectable_bin_map.rs  inspectable_bit_array.rs  inspectable_num.rs  log.rs  mod.rs  simd.rs  triangular_array.rs
