[package]
name = "pentultimate_solver"
version = "0.1.0"
authors = ["Zeke Baker <zbaker@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["serialize"] }
bevy_egui = "0.6.2"
bevy-inspector-egui = "0.6.1"
bincode = "1.3.3"
bit_field = "0.10.1"
egui = "0.13.1"
env_logger = "0.8.3"
epaint = "0.13.0"
fnv = "1.0.7"
gltf-json = "0.16.0"
hexf = "0.2.1"
json5 = "0.3.0"
lazy_static = "1.4.0"
libc = "0.2.99"
log = { version = "0.4.14", features = ["serde"] }
memmap = "0.7.0"
num-format = "0.4.0"
rand = "0.8.4"
rfd = "0.6.4"
ron = "*"
serde = "1.0.125"
serde_json = "1.0.78"
simple-error = "0.2.3"
static_assertions = "1.1.0"
toml = "0.5.8"

[dev-dependencies]
criterion = "0.3.4"
# wgpu = "0.7.1"

[features]
const_fn_floating_point_arithmetic = []
io_read_to_string = []
non_unit_tests = []

# specialization = []

default = ["const_fn_floating_point_arithmetic", "io_read_to_string"]

[[bench]]
name = "criterion_benchmarks"
harness = false

[profile.dev]
opt-level = 0

[[example]]
name = "transformation_finder"