[package]
name = "pentultimate_solver"
version = "0.1.0"
authors = ["Zeke Baker <zbaker@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["serialize"] }
bevy_egui = "0.6.2"
bevy-inspector-egui = "0.6.1"
bincode = { version = "1.3.3", optional = true }
bit_field = "0.10.1"
egui = "0.13.1"
env_logger = "0.8.3"
epaint = "0.13.0"
fnv = "1.0.7"
gltf-json = "0.16.0"
hexf = "0.2.1"
json5 = { version = "0.3.0", optional = true }
lazy_static = "1.4.0"
libc = "0.2.99"
log = { version = "0.4.14", features = ["serde"] }
memmap = "0.7.0"
num-format = "0.4.0"
num-traits = "0.2.14"
rand = "0.8.4"
rfd = "0.6.4"
ron = { version = "0.7.0", optional = true }
serde = "1.0.125"
serde_json = { version = "1.0.78", optional = true }
simple-error = "0.2.3"
static_assertions = "1.1.0"
toml = { version = "0.5.8", optional = true }

[dev-dependencies]
criterion = "0.3.4"
pentultimate_solver = { path = ".", features = ["default", "all_file_formats"] }
uuid = "0.8.2"
# wgpu = "0.7.1"

[features]
# default = ["const_fn_floating_point_arithmetic", "io_read_to_string", "ron"]
default = ["const_fn_floating_point_arithmetic", "io_read_to_string", "all_file_formats"]
const_fn_floating_point_arithmetic = []
io_read_to_string = []
non_unit_tests = []

# specialization = []

all_file_formats = ["bincode", "json5", "serde_json", "ron"] # toml is left out due to lack of supported types

[[bench]]
name = "criterion_benchmarks"
harness = false

[profile.dev]
opt-level = 0

[[example]]
name = "transformation_finder"